--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,44 @@
     position: relative;
     outline: 1px #333 solid ;
 }
+
+
+
+.title{
+    width: 40%;
+    border-bottom: 1px #333 solid;
+    position:relative ;
+    top: 30px;
+    text-align: right;
+    color: rgb(253, 148, 148);
+}
+.title strong{
+    color: #333
+}
+
+/* 첨인데요ㅕ */
+.pptitle{ display: flex; width: 250px;
+    justify-content: space-between;
+}
+.pptitle div:nth-child(1){ transform: translateY(-300px); opacity: 0;
+}
+.pptitle.on div:nth-child(1){ transform: translateY(0);
+    transition: .6s; opacity: 1;
+}
+
+.pptitle div:nth-child(2){ transform: translateY(300px);opacity: 0;
+}
+.pptitle.on div:nth-child(2){ transform: translateY(0);
+    transition: .6s;
+    transition-delay: .3s;opacity: 1;
+}
+
+.pptitle div:nth-child(3){ transform: translateY(-300px);opacity: 0;
+}
+.pptitle.on div:nth-child(3){ transform: translateY(0);
+    transition: .6s;opacity: 1;
+    transition-delay: .5s
+}
 /* 1번 메인 */
 #wrap>section:nth-child(1){
     /* background-image:url("")no-repeat; */
@@ -82,17 +120,8 @@
     margin: 10px 0 5px 0;
 }
 
-.title{
-    width: 40%;
-    border-bottom: 1px #333 solid;
-    position:relative ;
-    top: 30px;
-    text-align: right;
-    color: rgb(253, 148, 148);
-}
-.title strong{
-    color: #333
-}
+
+
 .mokup{
     width: 80%;
     margin: 15vh 5% 15vh 15%;
@@ -165,3 +194,82 @@
     background-size: cover;
     background-position: center center;
 }
+
+.gnb{
+    position:fixed;
+    width: 300px;
+    top: 50px;
+    left: 50px;
+    z-index: 111;
+}
+.gnb a{
+    background-color: #adf;
+    text-align: center;
+    list-style-type: 40px;
+    display: block;
+}
+
+/* #popupNAV{
+    width: 100%; height: 100vh;
+    position: fixed;
+    top: 0;left: 0;
+    z-index: 111111111111111111111;
+}
+#popupNAV.on{
+    background: rgb(0,0,0,.5);
+}
+
+#popupNAV nav{
+    width: 20%; margin-left: 100%;
+    height: 100vh;
+    background-color: #333;
+    padding-top: 5vh;
+    box-sizing: border-box;
+    transition: .3s;
+}
+
+#popupNAV.on nav{
+ margin-left: 80%;
+ 
+}
+
+#popupNAV .gnb a{ 
+    text-align: center; line-height: 40px;
+    color: #fff;
+    display: block;
+    font-size: 11px;
+    transition: .3s;
+}
+
+#popupNAV .gnb a:hover{
+    font-weight: bold;
+    text-decoration:underline;
+}
+.burger{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top:0%;
+    right: 0%;
+}
+.burger.on .navbar:nth-child(1),
+.burger.on .navbar:nth-child(4){
+    opacity: 0 ;
+}
+.burger.on .navbar:nth-child(2){
+    transform: rotate(45deg);
+}
+.burger.on .navbar:nth-child(3){
+    transform: rotate(-45deg);
+}
+.navbar{
+    width: 40px;
+    height: 8px;
+    background: #eee; 
+    transition: .3s;
+}
+
+.navbar:nth-child(even){
+    position: relative;
+    top: 8px;
+} */
